# Risk-manager-V6

./: README.md  pyproject.toml  run.py
data/: anchors.json
src/risk_app/: __init__.py
src/risk_app/adapters/: accounts.py  auth.py  balances.py  http.py  orders.py  positions.py  trades.py
src/risk_app/adapters/realtime/: gateway.py
src/risk_app/config/: accounts.yaml  config.yaml  logging.yaml  policies.yaml
src/risk_app/core/: bus.py  errors.py  logging_setup.py  money.py  settings.py  state.py  time.py
src/risk_app/domain/: models.py  validate.py
src/risk_app/engines/: mll.py  pdll.py  pnl.py  portfolio.py  realized_pnl.py  total_pnl.py  unrealized_pnl.py
src/risk_app/orchestrator/: main.py  monitor.py  scheduler.py
src/risk_app/repos/: accounts_repo.py  balances_repo.py  orders_repo.py  positions_repo.py  registry_repo.py  trades_repo.py
src/risk_app/services/: flatten_service.py  lockout_service.py  risk_service.py  rollover_service.py  session_service.py
src/risk_app/stores/: __init__.py  anchors_store.py
src/risk_app/ui/tui/: __init__.py  app.py  gateway.py  keymap.py
src/risk_app/ui/tui/views/: account_editor.py  dashboard.py  logs.py
tests/: test_flow_live_like.py  test_lockout.py  test_mll.py  test_pdll.py
